--- a/weather_visualization_dashboard.html
+++ b/weather_visualization_dashboard.html
@@ -1,16 +1,125 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Weather Visualization Dashboard</title>
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-          crossorigin="anonymous">
-    <link rel="stylesheet"
-          href="style.css">
+      <meta charset="UTF-8">
+      <title>Weather Visualization Dashboard</title>
+      <link rel="stylesheet"
+            href="reset.css">
+      <link rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous">
+      <link rel="stylesheet"
+            href="style.css">
+
 </head>
 
 <body>
 
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar"
+               href="#">Latitude</a>
+            <button class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse"
+                 id="navbarSupportedContent">
+                  <ul class="navbar-nav mr-auto">
+                        <li class="nav-item dropdown">
+                              <a class="nav-link dropdown-toggle"
+                                 href="#"
+                                 id="navbarDropdown"
+                                 role="button"
+                                 data-toggle="dropdown"
+                                 aria-haspopup="true"
+                                 aria-expanded="false">
+                                    Plots
+                              </a>
+                              <div class="dropdown-menu"
+                                   aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item"
+                                       href="#">Max Temperature</a>
+                                    <a class="dropdown-item"
+                                       href="#">Humidity</a>
+                                    <a class="dropdown-item"
+                                       href="#">Cloudiness</a>
+                                    <a class="dropdown-item"
+                                       href="#">Wind Speed</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item"
+                                       href="#">Something else here</a>
+                              </div>
+                        </li>
+                        <li class="nav-item">
+                              <a class="nav-link"
+                                 href="#">Comparison </a>
+                        </li>
+                        <li class="nav-item">
+                              <a class="nav-link"
+                                 href="#">Data </a>
+                        </li>
+
+                  </ul>
+      </nav>
+      <div class="row">
+            <div class="col-md-12">
+                  <header class="header">
+                        <h1>Summary: Latitude vs. X</h1>
+                  </header>
+            </div>
+            <main>
+                  <div class="container">
+                        <div class="row">
+                              <div class="col-md-8">
+                                    <a target="_blank"
+                                       href="C:\Users\setho\Desktop\Git\web_viz_hw\Resources\assets\images/Fig1.png">
+                                          <img src="C:\Users\setho\Desktop\Git\web_viz_hw\Resources\assets\images/Fig1.png"
+                                               alt="Max Temperature vs. Latitude">
+                                    </a>
+                                    <p>The purpose of this project was to analyze how weather changes as you get closer
+                                          to the equator. To accomplish this analysis, we
+                                          first pulled data from the OpenWeatherMap API to assemble a
+                                          dataset on over 500 cities.
+                                          <br>
+                                          <br>
+                                          After assembling the dataset, we used Matplotlib to plot various
+                                          aspects of the weather vs. latitude. Factors we looked at included:
+                                          temperature, cloudiness, wind speed, and humidity. This site provides
+                                          the source data and visualizations created as part of the analysis, as well as
+                                          explanation and
+                                          descriptions of analysis of any trends and correlations witnessed.
+                                    </p>
+                              </div>
+                              <div class="col-md-4 gallery">
+                                    <a target="_blank"
+                                       href="C:\Users\setho\Desktop\Git\web_viz_hw\Resources\assets\images/Fig1.png">
+                                          <img src="C:\Users\setho\Desktop\Git\web_viz_hw\Resources\assets\images/Fig1.png"
+                                               alt="">
+                                    </a>
+                                    <a target="_blank"
+                                       href="C:\Users\setho\Desktop\Git\web_viz_hw\Resources\assets\images/Fig2.png">
+                                          <img src="C:\Users\setho\Desktop\Git\web_viz_hw\Resources\assets\images/Fig2.png"
+                                               alt="">
+                                    </a>
+                                    <a target="_blank"
+                                       href="C:\Users\setho\Desktop\Git\web_viz_hw\Resources\assets\images/Fig3.png">
+                                          <img src="C:\Users\setho\Desktop\Git\web_viz_hw\Resources\assets\images/Fig3.png"
+                                               alt="">
+                                    </a>
+                                    <a target="_blank"
+                                       href="C:\Users\setho\Desktop\Git\web_viz_hw\Resources\assets\images/Fig4.png">
+                                          <img src="C:\Users\setho\Desktop\Git\web_viz_hw\Resources\assets\images/Fig4.png"
+                                               alt="">
+                                    </a>
+                              </div>
+                        </div>
+                  </div>
+            </main>
+      </div>
+      </div>
 </body>
