additional edits to text

--- a/cloudiness.html
+++ b/cloudiness.html
@@ -78,9 +78,8 @@
                              alt="Cloudiness Graph">
 
                         </a>
-                        <p> Cloudiness does not show a strong correlation to latitude. The visualization shows a
-                            great variety of cloudiness at different latitudes. Therefore, we cannot onclude that
-                            there is a conclusive pattern between cloudiness and latitude.
+                        <p> The data indicates that cloudiness does not correlate with latitude. Our graph provides
+                            a visual representation to back up this conclusion.
                         </p>
 
                     </div>
