--- a/humidity.html
+++ b/humidity.html
@@ -78,9 +78,8 @@
                              alt="Humidity Graph">
 
                         </a>
-                        <p> Humidity does not show a strong correlation to latitude. The visualiation shows
-                            a great variety of humidity at different latitudes. Therefore, we cannot conclude
-                            that there is a conclusive pattern between himidity and latitude
+                        <p> The data indicates that humidity does not correlate with latitude. Our graph provides
+                            a visual representation to back up this conclusion.
                         </p>
 
                     </div>
