--- a/max_temperature.html
+++ b/max_temperature.html
@@ -78,10 +78,9 @@
                              alt="Max Temperature Graph">
 
                         </a>
-                        <p> As expected, the weather becomes significantly warmer as one approaches
-                            the equator. More interestingly, however, is the fact that the southern
-                            hemisphere tends to be warmer this time of year than the norhern hemisphere.
-                            This ay be due to the tilt of the earth at the time of year this data was gathered.
+                        <p> The data indicates temperature rises as one approaches
+                            the equator. It also shows that the southern
+                            hemisphere tends to be warmer than the norhern hemisphere this time of year.
                         </p>
 
                     </div>
