--- a/wind_speed.html
+++ b/wind_speed.html
@@ -78,9 +78,9 @@
                              alt="Wind Speed Graph">
 
                         </a>
-                        <p> Wind speed seems to slightly increase as we move away from the equator. However,
-                            to conclusively descrive a pattern, we would need to go beyond the range in data
-                            to reach cities further from the equator.
+                        <p>The data indicates that wind speed slightly increases as we move away from the equator. However,
+                            based on our graphic visualization, more data would need to be collected and analyzed in order to
+                            determine a definitive conclusion.
                         </p>
 
                     </div>
@@ -113,7 +113,7 @@
                             <div class='row'
                                  style='padding-bottom: 30px'>
                                 <div class='col-6 visualizations'>
-                                    <a href="clooudiness.html">
+                                    <a href="cloudiness.html">
                                         <img class='panel'
                                              src="Resources\assets\images/Fig3.png"
                                              alt="Cloudiness Graph">
