--- a/comparison.html
+++ b/comparison.html
@@ -1,138 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
+  <head>
 
-<head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible"
-            content="IE=edge">
-      <meta name="viewport"
-            content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <title>Bootstrap Visualization Dashboard</title>
 
-      <link rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-            crossorigin="anonymous">
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-              integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-              crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-              integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-              crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-              integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-              crossorigin="anonymous"></script>
-      <link rel="stylesheet"
-            type="text/css"
-            media="screen"
-            href="style.css">
+    <!-- Boostrap Stylesheet -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" media="screen">
 
-      <title>Bootstrap Visualization Dashboard</title>
-</head>
+    <!-- Our own CSS stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css" media="screen">
 
-<body>
+  </head>
 
-      <nav class='navbar navbar-expand-lg navbar-light bg-light'>
-            <div class='container-fluid'>
-                  <a class='navbar-brand'
-                     href=index.html>
-                        <strong>Latitude</strong>
-                  </a>
+  <body>
+    <!-- Start of navbar -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid navbar-custom">
 
-
-                  <div class="navbar-nav navbar-right">
-                        <ul class="navbar-nav">
-                              <li class="dropdown nav-item">
-                                    <a class="dropdown-toggle nav-link"
-                                       href="plots.html"
-                                       role="button"
-                                       data-toggle="dropdown"
-                                       aria-haspopup="true"
-                                       aria-expanded="false">
-                                          Plots
-                                    </a>
-
-                                    <div class="dropdown-menu"
-                                         aria-labelledby="navbarDropdown">
-                                          <a class="dropdown-item"
-                                             href="max_temperature.html">Max Temperature</a>
-                                          <a class="dropdown-item"
-                                             href="humidity.html">Humidity</a>
-                                          <a class="dropdown-item"
-                                             href="cloudiness.html">Cloudiness</a>
-                                          <a class="dropdown-item"
-                                             href="wind_speed.html">Wind Speed</a>
-                                    </div>
-                              </li>
-                              <li class="nav-item">
-                                    <a class="nav-link"
-                                       href="comparison.html">Comparison </a>
-                              </li>
-                              <li class="nav-item">
-                                    <a class="nav-link"
-                                       href="data.html">Data </a>
-                              </li>
-                        </ul>
-                  </div>
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="row">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle Navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <div class="col-xs-9 phone-nav">
+              <a class="navbar-brand" href="index.html" id="logo">Lattitude</a>
             </div>
-      </nav>
+          </div>
 
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right navbar-right-custom">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                 <li><a href="visualizations/max_temperature.html">Max Temperature</a></li>
+                  <li><a href="visualizations/humidity.html">Humidity</a></li>
+                  <li><a href="visualizations/cloudiness.html">Cloudiness</a></li>
+                  <li><a href="visualizations/wind_speed.html">Wind Speed</a></li>
+                </ul>
+              </li>
+              <li><a href="comparison.html">Comparison</a></li>
+              <li><a href="data.html">Data</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div>
+      </div><!-- /.container-fluid -->
+    </nav>
+    <!-- End of navbar -->
 
+    <!-- Start of container -->
+    <div class="container">
+      <article class="description-content row">
+        <div class="col-xs-12">
+          <h1 class="description-header">Comparison: Latitude vs X</h1>
+          <hr class="description-hr"/>
+          <p class="description-text">Click any plot to get an in-depth analysis.</p>
+        </div>
+        <div class="col-md-6">
+          <h2 class="comparison-header">vs. Max Temperature</h2>
+          <a href="visualizations/max_temperature.html"><img src="assets/images/Fig1.png" alt="Latitude vs. Max Temperature" class="comparison-image img-responsive"></a>
+          <hr class="visible-xs visible-sm">
+        </div>
+        <div class="col-md-6">
+          <h2 class="comparison-header">vs. Humidity</h2>
+          <a href="visualizations/humidity.html"><img src="assets/images/Fig2.png" alt="Latitude vs. Humidity" class="comparison-image img-responsive"></a>
+          <hr class="visible-xs visible-sm">
+        </div>
+        <div class="col-md-6">
+          <h2 class="comparison-header">vs. Cloudiness</h2>
+          <a href="visualizations/cloudiness.html"><img src="assets/images/Fig3.png" alt="Latitude vs. Cloudiness" class="comparison-image img-responsive"></a>
+          <hr class="visible-xs visible-sm">
+        </div>
+        <div class="col-md-6">
+          <h2 class="comparison-header">vs. Wind Speed</h2>
+          <a href="visualizations/wind_speed.html"><img src="assets/images/Fig4.png" alt="Latitude vs. Wind Speed" class="comparison-image img-responsive"></a>
+        </div>
+      </article>
+    </div>
+    <!-- End of container  -->
 
-      <main>
-            <div class='col-lg-12 col-md-6'>
-                  <div class='container'
-                       id='comparison'>
-                        <h1>Comparison: Latitude vs X</h1>
-                        <h5>Click any plot to get in-depth analysis</h5>
-                        <div class='row'>
-                              <div class='col-lg-6 col-md-12'>
-                                    <h2>vs Max Temperature</h2>
-                                    <a href="max_temperature.html">
-                                          <img class='image'
-                                               src="Resources\assets\images/Fig1.png"
-                                               alt="Max Temperature Graph">
-                                          <div class='middle text'>Max Temperature Graph</div>
-                                    </a>
-                              </div>
-                              <div class='col-lg-6 col-md-12'>
-                                    <h2>vs Humidity</h2>
-                                    <a href="humidity.html">
-                                          <img class='image'
-                                               src="Resources\assets\images/Fig2.png"
-                                               alt="Humidity Graph">
-                                          <div class='middle text'>Humidity Graph</div>
-                                    </a>
-                              </div>
-                        </div>
-                        <div class='row'>
-                              <div class='col-lg-6 col-md-12'>
-                                    <h2>vs Cloudiness</h2>
-                                    <a href="cloudiness.html">
-                                          <img class='image'
-                                               src="Resources\assets\images/Fig3.png"
-                                               alt="Cloudiness Graph">
-                                          <div class='middle text'>Cloudiness Graph</div>
-                                    </a>
-                              </div>
-                              <div class='col-lg-6 col-md-12'>
-                                    <h2>vs Wind Speed</h2>
-                                    <a href="wind_speed.html">
-                                          <img class='image'
-                                               src="Resources\assets\images/Fig4.png"
-                                               alt="Wind Speed Graph">
-                                          <div class='middle text'>Wind Speed Graph</div>
-                                    </a>
-                              </div>
-                        </div>
-                  </div>
-            </div>
-      </main>
+    <!-- Start of footer -->
+    <footer class="footer navbar-fixed-bottom">
+      <div class="two-toned-footer-color"></div>
+      <p class="text-muted text-muted-footer text-center">
+        &copy; Copyright Coding Bootcamp 2017
+      </p>
+    </footer>
+    <!-- End of footer -->
 
-      <footer>
-            <div class='footer'>Copyright & copy; Seth Lindaman 2019</div>
-      </footer>
+    <!-- jQuery CDN -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
-</body>
+    <!-- Bootstrap CDN -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  </body>
 
 </html>
